--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ archives_base_name=c2me-fabric
 async_util_version=0.1.0
 night_config_version=3.6.3
 threadly_version=6.6
+error_prone_core_version=2.3.3
