--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'fabric-loom' version '0.8-SNAPSHOT'
     id 'maven-publish'
     id 'com.github.johnrengelman.shadow' version '6.1.0'
+    id 'net.ltgt.errorprone' version "2.0.1"
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
@@ -43,6 +44,7 @@ dependencies {
     shadowImpl "com.ibm.async:asyncutil:${async_util_version}"
     shadowImpl "com.electronwill.night-config:toml:${night_config_version}"
     shadowImpl "org.threadly:threadly:${threadly_version}"
+    errorprone("com.google.errorprone:error_prone_core:${error_prone_core_version}")
 
     // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
     // You may need to force-disable transitiveness on them.
